removed usage of ShipCommon, BulletCommon, WreckCommon and etc classes, made own classes for client/server